force-app/main/default/objects/ProjectProduct__c/fields/ProjectedVolume2YearMetric__c.field-meta.xml
<CustomField>
    <fullName>ProjectedVolume2YearMetric__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected Volume (2-Year) Metric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>