force-app/main/default/objects/ProjectProduct__c/fields/ProjectedVolumeCM0YearMetric__c.field-meta.xml
<CustomField>
    <fullName>ProjectedVolumeCM0YearMetric__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Volume CM (0-Year) Metric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>