force-app/main/default/objects/ProjectProduct__c/fields/ProjectedVolumeCM1YearImperial__c.field-meta.xml
<CustomField>
    <fullName>ProjectedVolumeCM1YearImperial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Projected Volume CM (1-Year) Imperial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>