force-app/main/default/objects/ProjectProduct__c/fields/ProjectedVolumeCM2YearImperial__c.field-meta.xml
<CustomField>
    <fullName>ProjectedVolumeCM2YearImperial__c</fullName>
    <label>Projected Volume CM (2-Year) Imperial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>