force-app/main/default/objects/ProjectProduct__c/fields/SystemOfMeasureInput__c.field-meta.xml
<CustomField>
    <fullName>SystemOfMeasureInput__c</fullName>
    <description>Users preferred System of Measure. Values input in Metric will be automatically converted to Imperial.  Values input in Imperial will be automatically converted to Metric.</description>
    <inlineHelpText>Users preferred System of Measure. Values input in Metric will be automatically converted to Imperial.  Values input in Imperial will be automatically converted to Metric.</inlineHelpText>
    <label>System of Measure Input</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>