force-app/main/default/objects/ProjectProduct__c/fields/Trigger_workflow__c.field-meta.xml
<CustomField>
    <fullName>Trigger_workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger workflow</label>
    <type>Checkbox</type>
</CustomField>