force-app/main/default/objects/ProjectProduct__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <description>Unit of Measure for a Product Line Item</description>
    <inlineHelpText>Indicate the Unit of Measure for a Product Line Item.</inlineHelpText>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure_Combined</valueSetName>
    </valueSet>
</CustomField>