force-app/main/default/objects/ProjectProduct__c/fields/VolumeUnitOfMeasureMetric__c.field-meta.xml
<CustomField>
    <fullName>VolumeUnitOfMeasureMetric__c</fullName>
    <label>Volume Unit of Measure (Metric)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitOfMeasureMetric</valueSetName>
    </valueSet>
</CustomField>