force-app/main/default/objects/ProjectProduct__c/fields/VolumeUnitOMeasureImperial__c.field-meta.xml
<CustomField>
    <fullName>VolumeUnitOMeasureImperial__c</fullName>
    <label>Volume Unit of Measure (Imperial)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitOfMeasureImperial</valueSetName>
    </valueSet>
</CustomField>