force-app/main/default/objects/ProjectProduct__c/validationRules/Opportunity_Stage_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_Closed_Won</fullName>
    <active>false</active>
    <description>If the related Opportunity is in Closed Won stage, then no update is allowed</description>
    <errorConditionFormula>ISPICKVAL(Project__r.Opportunity__r.StageName, &#39;Closed Won&#39;)</errorConditionFormula>
    <errorMessage>If the related Opportunity is in Closed Won stage, then no update is allowed</errorMessage>
</ValidationRule>